all working wooo. TODO: Refactor dir structure
