# docs/swagger/gonuxt.openapi.json
@@ -6,13 +6,96 @@
     },
     "tags": [
         {
+            "name": "Auth"
+        },
+        {
             "name": "GoNuxt"
         }
     ],
     "paths": {
-        "/auth/google": {
+        "/v1/auth/email/create": {
+            "post": {
+                "operationId": "Auth_CreateUser",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/pbCreateUserResponse"
+                                }
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "An unexpected error response.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/rpcStatus"
+                                }
+                            }
+                        }
+                    }
+                },
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/pbCreateUserRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "tags": [
+                    "Auth"
+                ]
+            }
+        },
+        "/v1/auth/email/login": {
+            "post": {
+                "operationId": "Auth_LoginUser",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/pbLoginUserResponse"
+                                }
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "An unexpected error response.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/rpcStatus"
+                                }
+                            }
+                        }
+                    }
+                },
+                "requestBody": {
+                    "content": {
+                        "application/json": {
+                            "schema": {
+                                "$ref": "#/components/schemas/pbLoginUserRequest"
+                            }
+                        }
+                    },
+                    "required": true
+                },
+                "tags": [
+                    "Auth"
+                ]
+            }
+        },
+        "/v1/auth/google": {
             "get": {
-                "operationId": "GoNuxt_GoogleLogin",
+                "operationId": "Auth_GoogleLogin",
                 "responses": {
                     "200": {
                         "description": "A successful response.",
@@ -36,13 +119,13 @@
                     }
                 },
                 "tags": [
-                    "GoNuxt"
+                    "Auth"
                 ]
             }
         },
-        "/auth/google/callback": {
+        "/v1/auth/google/callback": {
             "get": {
-                "operationId": "GoNuxt_GoogleCallback",
+                "operationId": "Auth_GoogleCallback",
                 "responses": {
                     "200": {
                         "description": "A successful response.",
@@ -84,91 +167,11 @@
                     }
                 ],
                 "tags": [
-                    "GoNuxt"
+                    "Auth"
                 ]
             }
         },
-        "/v1/create_user": {
-            "post": {
-                "operationId": "GoNuxt_CreateUser",
-                "responses": {
-                    "200": {
-                        "description": "A successful response.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/pbCreateUserResponse"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "An unexpected error response.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/rpcStatus"
-                                }
-                            }
-                        }
-                    }
-                },
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/pbCreateUserRequest"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "tags": [
-                    "GoNuxt"
-                ]
-            }
-        },
-        "/v1/login_user": {
-            "post": {
-                "operationId": "GoNuxt_LoginUser",
-                "responses": {
-                    "200": {
-                        "description": "A successful response.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/pbLoginUserResponse"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "An unexpected error response.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/rpcStatus"
-                                }
-                            }
-                        }
-                    }
-                },
-                "requestBody": {
-                    "content": {
-                        "application/json": {
-                            "schema": {
-                                "$ref": "#/components/schemas/pbLoginUserRequest"
-                            }
-                        }
-                    },
-                    "required": true
-                },
-                "tags": [
-                    "GoNuxt"
-                ]
-            }
-        },
-        "/v1/refresh_token": {
+        "/v1/token/refresh": {
             "get": {
                 "operationId": "GoNuxt_RefreshToken",
                 "responses": {
@@ -198,7 +201,37 @@
                 ]
             }
         },
-        "/v1/update_user": {
+        "/v1/token/verify": {
+            "get": {
+                "operationId": "GoNuxt_VerifyToken",
+                "responses": {
+                    "200": {
+                        "description": "A successful response.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/pbVerifyTokenResponse"
+                                }
+                            }
+                        }
+                    },
+                    "default": {
+                        "description": "An unexpected error response.",
+                        "content": {
+                            "application/json": {
+                                "schema": {
+                                    "$ref": "#/components/schemas/rpcStatus"
+                                }
+                            }
+                        }
+                    }
+                },
+                "tags": [
+                    "GoNuxt"
+                ]
+            }
+        },
+        "/v1/user": {
             "patch": {
                 "operationId": "GoNuxt_UpdateUser",
                 "responses": {
@@ -232,36 +265,6 @@
                         }
                     },
                     "required": true
-                },
-                "tags": [
-                    "GoNuxt"
-                ]
-            }
-        },
-        "/v1/verify_token": {
-            "get": {
-                "operationId": "GoNuxt_VerifyToken",
-                "responses": {
-                    "200": {
-                        "description": "A successful response.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/pbVerifyTokenResponse"
-                                }
-                            }
-                        }
-                    },
-                    "default": {
-                        "description": "An unexpected error response.",
-                        "content": {
-                            "application/json": {
-                                "schema": {
-                                    "$ref": "#/components/schemas/rpcStatus"
-                                }
-                            }
-                        }
-                    }
                 },
                 "tags": [
                     "GoNuxt"
